--- a/public/index.html
+++ b/public/index.html
@@ -316,8 +316,9 @@
         </div>
     </footer>
 
-	    <script src="vendor/i18next.min.js"></script>
-	    <script src="i18n.js"></script>
+		    <script src="vendor/i18next.min.js"></script>
+		    <script src="vendor/i18nextBrowserLanguageDetector.min.js"></script>
+		    <script src="i18n.js"></script>
 	    <script src="script.js"></script>
 	</body>
 	</html>
